--- a/FOG_kalmman3/project_tt.runs/impl_1/usage_statistics_webtalk.html
+++ b/FOG_kalmman3/project_tt.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1909853</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Feb 25 17:19:24 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Feb 27 17:29:32 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2017.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>46be28093db64e269a7ef843f5ee7326</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>279</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>dfd2ccbe88535548b7c005eb28841646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>dfd2ccbe88535548b7c005eb28841646</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>280</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>71475a4049ae502790b9ece6890e8362</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211575413_0_0_503</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7z010</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>zynq</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-7400 CPU @ 3.00GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3000 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-8565U CPU @ 1.80GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1992 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -39,9 +39,9 @@
    <TD>editundo=16</TD>
    <TD>fileexit=1</TD>
    <TD>openblockdesign=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openproject=22</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openproject=23</TD>
    <TD>recustomizecore=21</TD>
-   <TD>runbitgen=305</TD>
+   <TD>runbitgen=306</TD>
    <TD>runimplementation=28</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runsynthesis=27</TD>
    <TD>savefileproxyhandler=11</TD>
@@ -52,7 +52,7 @@
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=46</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=47</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -1109,6 +1109,203 @@
    </TD></TR>
   </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_methodology</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-append=default::[not_specified]</TD>
+    <TD>-checks=default::[not_specified]</TD>
+    <TD>-fail_on=default::[not_specified]</TD>
+    <TD>-force=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-format=default::[not_specified]</TD>
+    <TD>-messages=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+    <TD>-return_string=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-waived=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>synth-5=30</TD>
+    <TD>timing-15=14</TD>
+    <TD>timing-16=1000</TD>
+    <TD>timing-17=129</TD>
+</TR><TR ALIGN='LEFT'>    <TD>timing-18=26</TD>
+    <TD>xdcc-5=4</TD>
+    <TD>xdch-2=32</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-advisory=default::[not_specified]</TD>
+    <TD>-append=default::[not_specified]</TD>
+    <TD>-file=[specified]</TD>
+    <TD>-format=default::text</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-hier=default::power</TD>
+    <TD>-l=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+    <TD>-no_propagation=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-return_string=default::[not_specified]</TD>
+    <TD>-rpx=[specified]</TD>
+    <TD>-verbose=default::[not_specified]</TD>
+    <TD>-vid=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-xpe=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>airflow=250 (LFM)</TD>
+    <TD>ambient_temp=25.0 (C)</TD>
+    <TD>bi-dir_toggle=12.500000</TD>
+    <TD>bidir_output_enable=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
+    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
+    <TD>clocks=0.062235</TD>
+    <TD>confidence_level_clock_activity=High</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
+    <TD>confidence_level_device_models=High</TD>
+    <TD>confidence_level_internal_activity=Medium</TD>
+    <TD>confidence_level_io_activity=Low</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
+    <TD>customer=TBD</TD>
+    <TD>customer_class=TBD</TD>
+    <TD>devstatic=0.143588</TD>
+</TR><TR ALIGN='LEFT'>    <TD>die=xc7z010clg400-1</TD>
+    <TD>dsp_output_toggle=12.500000</TD>
+    <TD>dynamic=2.229400</TD>
+    <TD>effective_thetaja=11.5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
+    <TD>family=zynq</TD>
+    <TD>ff_toggle=12.500000</TD>
+    <TD>flow_state=routed</TD>
+</TR><TR ALIGN='LEFT'>    <TD>heatsink=none</TD>
+    <TD>i/o=0.265069</TD>
+    <TD>input_toggle=12.500000</TD>
+    <TD>junction_temp=52.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.229672</TD>
+    <TD>mgtavcc_dynamic_current=0.000000</TD>
+    <TD>mgtavcc_static_current=0.000000</TD>
+    <TD>mgtavcc_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_voltage=1.000000</TD>
+    <TD>mgtavtt_dynamic_current=0.000000</TD>
+    <TD>mgtavtt_static_current=0.000000</TD>
+    <TD>mgtavtt_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
+    <TD>mgtvccaux_dynamic_current=0.000000</TD>
+    <TD>mgtvccaux_static_current=0.000000</TD>
+    <TD>mgtvccaux_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtvccaux_voltage=1.800000</TD>
+    <TD>netlist_net_matched=NA</TD>
+    <TD>off-chip_power=0.000000</TD>
+    <TD>on-chip_power=2.372988</TD>
+</TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
+    <TD>output_load=5.000000</TD>
+    <TD>output_toggle=12.500000</TD>
+    <TD>package=clg400</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=13.000000</TD>
+    <TD>pct_inputs_defined=2</TD>
+    <TD>platform=nt64</TD>
+    <TD>pll=0.097184</TD>
+</TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
+    <TD>ps7=1.281472</TD>
+    <TD>ram_enable=50.000000</TD>
+    <TD>ram_write=50.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>read_saif=False</TD>
+    <TD>set/reset_probability=0.000000</TD>
+    <TD>signal_rate=False</TD>
+    <TD>signals=0.289888</TD>
+</TR><TR ALIGN='LEFT'>    <TD>simulation_file=None</TD>
+    <TD>speedgrade=-1</TD>
+    <TD>static_prob=False</TD>
+    <TD>temp_grade=commercial</TD>
+</TR><TR ALIGN='LEFT'>    <TD>thetajb=9.3 (C/W)</TD>
+    <TD>thetasa=0.0 (C/W)</TD>
+    <TD>toggle_rate=False</TD>
+    <TD>user_board_temp=25.0 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_effective_thetaja=11.5</TD>
+    <TD>user_junc_temp=52.4 (C)</TD>
+    <TD>user_thetajb=9.3 (C/W)</TD>
+    <TD>user_thetasa=0.0 (C/W)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccadc_dynamic_current=0.001600</TD>
+    <TD>vccadc_static_current=0.020000</TD>
+    <TD>vccadc_total_current=0.021600</TD>
+    <TD>vccadc_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_dynamic_current=0.056290</TD>
+    <TD>vccaux_io_dynamic_current=0.000000</TD>
+    <TD>vccaux_io_static_current=0.000000</TD>
+    <TD>vccaux_io_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_voltage=1.800000</TD>
+    <TD>vccaux_static_current=0.012265</TD>
+    <TD>vccaux_total_current=0.068555</TD>
+    <TD>vccaux_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_dynamic_current=0.000000</TD>
+    <TD>vccbram_static_current=0.000594</TD>
+    <TD>vccbram_total_current=0.000594</TD>
+    <TD>vccbram_voltage=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.589676</TD>
+    <TD>vccint_static_current=0.009498</TD>
+    <TD>vccint_total_current=0.599174</TD>
+    <TD>vccint_voltage=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco12_dynamic_current=0.000000</TD>
+    <TD>vcco12_static_current=0.000000</TD>
+    <TD>vcco12_total_current=0.000000</TD>
+    <TD>vcco12_voltage=1.200000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco135_dynamic_current=0.000000</TD>
+    <TD>vcco135_static_current=0.000000</TD>
+    <TD>vcco135_total_current=0.000000</TD>
+    <TD>vcco135_voltage=1.350000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco15_dynamic_current=0.000000</TD>
+    <TD>vcco15_static_current=0.000000</TD>
+    <TD>vcco15_total_current=0.000000</TD>
+    <TD>vcco15_voltage=1.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco18_dynamic_current=0.000000</TD>
+    <TD>vcco18_static_current=0.000000</TD>
+    <TD>vcco18_total_current=0.000000</TD>
+    <TD>vcco18_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco25_dynamic_current=0.000000</TD>
+    <TD>vcco25_static_current=0.000000</TD>
+    <TD>vcco25_total_current=0.000000</TD>
+    <TD>vcco25_voltage=2.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_dynamic_current=0.076985</TD>
+    <TD>vcco33_static_current=0.001000</TD>
+    <TD>vcco33_total_current=0.077985</TD>
+    <TD>vcco33_voltage=3.300000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_ddr_dynamic_current=0.354314</TD>
+    <TD>vcco_ddr_static_current=0.002000</TD>
+    <TD>vcco_ddr_total_current=0.356314</TD>
+    <TD>vcco_ddr_voltage=1.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_mio0_dynamic_current=0.000938</TD>
+    <TD>vcco_mio0_static_current=0.001000</TD>
+    <TD>vcco_mio0_total_current=0.001938</TD>
+    <TD>vcco_mio0_voltage=3.300000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_mio1_dynamic_current=0.002187</TD>
+    <TD>vcco_mio1_static_current=0.001000</TD>
+    <TD>vcco_mio1_total_current=0.003187</TD>
+    <TD>vcco_mio1_voltage=2.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpaux_dynamic_current=0.027188</TD>
+    <TD>vccpaux_static_current=0.010330</TD>
+    <TD>vccpaux_total_current=0.037518</TD>
+    <TD>vccpaux_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpint_dynamic_current=0.667520</TD>
+    <TD>vccpint_static_current=0.039326</TD>
+    <TD>vccpint_total_current=0.706846</TD>
+    <TD>vccpint_voltage=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpll_dynamic_current=0.013878</TD>
+    <TD>vccpll_static_current=0.003000</TD>
+    <TD>vccpll_total_current=0.016878</TD>
+    <TD>vccpll_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>version=2017.2</TD>
+    <TD>xadc=0.003880</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_utilization</B></TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -1285,8 +1482,8 @@
     <TD>lut_as_distributed_ram_used=120</TD>
     <TD>lut_as_logic_available=17600</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=16596</TD>
-    <TD>lut_as_logic_util_percentage=94.30</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=16582</TD>
+    <TD>lut_as_logic_util_percentage=94.22</TD>
     <TD>lut_as_memory_available=6000</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=186</TD>
@@ -1303,20 +1500,20 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=17600</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=16782</TD>
-    <TD>slice_luts_util_percentage=95.35</TD>
+    <TD>slice_luts_used=16768</TD>
+    <TD>slice_luts_util_percentage=95.27</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=35200</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_used=7089</TD>
     <TD>slice_registers_util_percentage=20.14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=20.14</TD>
-    <TD>fully_used_lut_ff_pairs_used=174</TD>
+    <TD>fully_used_lut_ff_pairs_used=175</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=120</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=17600</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=16596</TD>
-    <TD>lut_as_logic_util_percentage=94.30</TD>
+    <TD>lut_as_logic_used=16582</TD>
+    <TD>lut_as_logic_util_percentage=94.22</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=6000</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=186</TD>
@@ -1324,21 +1521,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=66</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=66</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=2946</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=2946</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=3375</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=2826</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=2826</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=3323</TD>
     <TD>lut_flip_flop_pairs_available=17600</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=3642</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=20.69</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=3590</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=20.40</TD>
     <TD>slice_available=4400</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=4399</TD>
-    <TD>slice_util_percentage=99.98</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=4398</TD>
+    <TD>slice_util_percentage=99.95</TD>
     <TD>slicel_fixed=0</TD>
     <TD>slicel_used=2900</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=1499</TD>
+    <TD>slicem_used=1498</TD>
     <TD>unique_control_sets_used=85</TD>
     <TD>using_o5_and_o6_fixed=85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=4</TD>
@@ -1391,17 +1588,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=13076306</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=12701211</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
     <TD>bufr=0</TD>
-    <TD>congestion_level=3</TD>
+    <TD>congestion_level=2</TD>
     <TD>ctrls=85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=32766786</TD>
+    <TD>estimated_expansions=33225378</TD>
     <TD>ff=7103</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=6</TD>
     <TD>high_fanout_nets=8</TD>
@@ -1462,10 +1659,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:02:02s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:02:18s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=608.660MB</TD>
-    <TD>memory_peak=881.063MB</TD>
+    <TD>memory_gain=610.129MB</TD>
+    <TD>memory_peak=866.094MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
